# stellar-agent-spend-hub

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  vercel.json
.claude/: launch.json
api/: [...path].mjs
contracts/spend-account-v1/: Cargo.toml  README.md
contracts/spend-account-v1/src/: lib.rs  test.rs
docs/: README.md  architecture.md  contract-account-fixture-result.md  contract-account-human-acceptance.md  current-state.md  demo-script.md  demo-storyboard.md  demo-walkthrough-product.md  deploy-vercel.md  first-outreach-pack.md  mcp-server.md  non-expert-user-test-guide.md  partner-shortlist.md  partner-strategy.md  pilot-test-guide.md  pitch.md  privacy-security.md  product.md  provider-kit.md  public-evidence.md  release-checklist.md  roadmap.md  scf-acceptance-runbook.md  scf-application.md  scf-evidence-snapshot.json  scf-executive-summary-es.md  scf-pitch-deck.md  sprint-01-testnet-payment.md  sprint-02-testnet-payment-result.md  sprint-03-smart-wallet-plan.md  sprint-05-soroban-testnet-result.md  sprint-05-soroban-testnet-runbook.md  sprint-06-sac-transfer-result.md  sprint-06-sac-transfer-runbook.md  sprint-07-app-soroban-receipt.md  sprint-08-soroban-runtime.md  sprint-09-mpp-escrow-v2.md  sprint-10-contract-account.md  sprint-11-13-status.md  sprint-14-16-status.md  (+10 more)
scripts/: base-merchant-identity.mjs  base-x402-acceptance.mjs  build-static.mjs  capture-scf-evidence.mjs  check-scf-package.mjs  contract-account-ceremony.mjs  contract-account-fixture-e2e.mjs  contract-account-testnet.mjs  dev-watch.mjs  doctor.mjs  (+15 more)
(+143 files in other folders)
