[package]
name = "spend-account-v1"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
serde = { version = "1", default-features = false, features = ["derive"] }
serde-json-core = "0.6"

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
p256 = { version = "0.13", features = ["ecdsa"] }
ed25519-dalek = "2"
sha2 = "0.10"
